@@ -181,6 +181,10 @@
     "historical_low": "Historical Lowest Price",
     "games_with_booster": "__boostergames__ games eligible for booster packs",
     "sort_by": "Sort by:",
+    "edit_price": "Edit Price",
+    "relist": "Relist",
+    "relist_an_item": "Relist an item",
+    "relist_text": "Would you like to relist this item at a lower price?",
     "search_market": "Search Steam Community Market",
     "drm_third_party_sub": "Warning: One or more titles in this package use 3rd party DRM",
     "customize": "Customize",
